--- a/dha.css
+++ b/dha.css
@@ -1,3 +1,14 @@
+body {
+    font-family: 'Poppins', sans-serif;
+    color: #333;
+}
+.head{
+    font-family: "Moderustic", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
+  }
+  
 .carousel-inner img {
     max-height: 300px;
     object-fit: cover;
@@ -43,8 +54,8 @@
 }
 
 .content-box {
-    background-color: #c1bebb;
-    background-image: linear-gradient(90deg, #0E2E50,white);
+    
+    
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -66,10 +77,8 @@
     line-height: 1.5;
 }
 
-
-
 footer {
-    background-color: #333;
+    background-color: #0E2E50;
     color: #fff;
     padding: 40px 0;
     text-align: center;
@@ -84,6 +93,17 @@ footer a {
 footer a:hover {
     color: #B7773A;
 }
+
+.footer-section {
+    margin-bottom: 20px;
+}
+
+.google-map {
+    border: 0;
+    width: 100%;
+    height: 250px;
+}
+
 
 .contact-form {
     max-width: 600px;
