--- a/dha.css
+++ b/dha.css
@@ -78,7 +78,7 @@ body {
 }
 
 footer {
-    background-color: #0E2E50;
+    background-color: #0C3C35;
     color: #fff;
     padding: 40px 0;
     text-align: center;
