--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     color: #333;
 }
 .contact-box {
-    background-color: #0E2E50;
+    background-color: #0C3C35;
     padding: 10px 0;
     color: white;
     text-align: center;
@@ -39,13 +39,13 @@ body {
 }
 
 .navbar-brand img {
-    max-width: 180px;
+    max-width: 250px;
     height: auto;
 }
 
 .navbar-nav .nav-link {
     font-size: 18px;
-    color: #0E2E50;
+    color: #0C3C35;
     margin: 0 10px;
     transition: color 0.3s;
 }
@@ -146,32 +146,6 @@ section {
     transform: scale(1.05);
 }
 
-footer {
-    background-color: #0E2E50;
-    color: #fff;
-    padding: 40px 0;
-    text-align: center;
-}
-
-footer a {
-    color: #fff;
-    margin: 0 10px;
-    transition: color 0.3s;
-}
-
-footer a:hover {
-    color: #B7773A;
-}
-
-.footer-section {
-    margin-bottom: 20px;
-}
-
-.google-map {
-    border: 0;
-    width: 100%;
-    height: 250px;
-}
 
 
 
@@ -300,9 +274,9 @@ h1::after {
 .gallery {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+   
     gap: 15px;
-    padding: 20px;
+   
 }
 
 .gallery-item {
@@ -393,21 +367,22 @@ h1::after {
 
 .checkbox-item {
     display: flex;
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
     margin-bottom: 20px;
     padding: 10px;
     border-bottom: 1px solid #ddd;
 }
 
-.checkbox-item input[type="checkbox"] {
-    margin-right: 15px;
-    margin-top: 5px;
-    transform: scale(1.3);
+.checkbox-item-img {
+    margin-bottom: 10px;
 }
 
 .checkbox-item label {
     font-size: 18px;
     color: #343a40;
+    width: 100%;
 }
 
 .checkbox-item label strong {
@@ -426,18 +401,8 @@ h1::after {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.btn-primary {
-    background-color: #B7773A; /* Your preferred theme color */
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-}
 
-.btn-primary:hover {
-    background-color: #a5652f; /* Slightly darker shade for hover effect */
-}
+
 
 body {
     background-color: white;
@@ -490,4 +455,38 @@ body {
     100% {
         transform: translateX(-100%);
     }
+}
+.whatsapp-chat {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+}
+
+.whatsapp-chat img {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    transition: width 0.3s, height 0.3s; /* Smooth resizing transition */
+}
+
+/* Media query for larger screens */
+@media (min-width: 768px) {
+    .whatsapp-chat img {
+        width: 60px;
+        height: 60px;
+    }
+}
+
+/* Media query for smaller screens */
+@media (max-width: 480px) {
+    .whatsapp-chat img {
+        width: 40px;
+        height: 40px;
+        right: 10px; /* Adjust position for smaller screens */
+        bottom: 10px;
+    }
+}
+#shadow-host-companion {
+    display: none;
 }
