--- a/style.css
+++ b/style.css
@@ -94,6 +94,9 @@ body {
     .carousel-caption h1 {
         font-size: 16px; 
     }
+    .carousel-caption h3 {
+        font-size: 16px; 
+    }
 
     .carousel-caption p {
         font-size: 8px; }
